--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<title>万紫怡的网站</title>
-<head></head>
+<html>
+ <head>
+  <meta name="123" content="width=device-width,initial-scale=1.0">
+   <title>万紫怡的网页</title>
+   <link rel=stylesheet" href="index.css">
+</head>
 <body>
-  <div class="p">
+  <div class="p"width=10px heigh=50px>
   nihao!
-    
   </div>
-</body>
+</body> 
+</html>
+
