--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <link rel=stylesheet" href="index.css">
 </head>
 <body>
-  <div class="p"width=10px heigh=50px>
+  <div class="p">
   nihao!
   </div>
 </body> 
